--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "module": "dist/index.js",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
-  "type": "module",
   "scripts": {
     "generate-types": "dts-bundle-generator -o ./dist/index.d.ts ./src/index.ts",
     "build": "node build.js && npm run generate-types",
@@ -33,11 +32,12 @@
     "eslint": "^8.57.0",
     "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.2.5",
-    "typescript": "^5.4.3",
+    "typescript": "^5.4.5",
     "typescript-eslint": "^7.4.0"
   },
   "dependencies": {
     "@bitcoin-js/tiny-secp256k1-asmjs": "^2.2.3",
-    "bitcoinjs-lib": "^6.1.5"
+    "bitcoinjs-lib": "^6.1.5",
+    "ts-node": "^10.9.2"
   }
 }
